--- a/index.html
+++ b/index.html
@@ -267,8 +267,9 @@
 										</ul>
 										<ol>
 											<li>Tested water quality of pond and municipal samples to compare dissolved oxygen, contaminant levels, pH, and turbidity.</li>
+											<li>Acquired the skills to assess, devise, and apply prairie restoration strategies to promote wildlife habitat, 
+												outdoor recreation, and restore native prairies for pollinators.</li>	
 											<li>Measured nutrient levels, pH, and soil structure/texture to compare soil health between different land uses.</li>
-											<li>Planted native plants and seeds on 4 acres of a restored native prairie to promote pollinator habitats, outdoor recreation, and land restoration. </li>
 											<li>Assessed the influence fertilizers and temperature have on dissolved oxygen content in freshwater ecosystems.</li>
 											<li>Collected and identified benthic macroinvertebrates and biomonitors to assess aquatic habitat quality in local streams.</li>
 											<li>Analyzed changes in the global climate over time (e.g., carbon dioxide levels, sea levels, global temperature).</li>
