--- a/index.html
+++ b/index.html
@@ -323,8 +323,8 @@
 											<li>Analyzed satellite imagery and digitized forest and rangeland boundaries.</li>
 										</ol>
 										<ul>
-											<li>Assessed current GIS technologies to apply the best and develop new spatial processes to meet project objectives.</li>
-										</ul>
+										<li>Applied the best and developed new spatial processes using ArcGIS to assess conservation corridor 
+											efficacy and inform land and wildlife management.</li>										</ul>
 										<ol>
 											<li>Thoroughly documented methodological approaches and troubleshooting. </li>
 										</ol>
@@ -362,7 +362,7 @@
 											<i><a target="_blank" rel="noopener noreferrer" href="https://www.docorridorswork.com/project-personnel-1">Do Corridors Work?</a></i>,
 											in conjunction with field data collection and genetic analysis.</li>
 											<li>Consistently executed spatial and statistical analysis for 3 landscapes to produce cartographic and
-												data-driven products that inform conservation planning and support land management.</li>
+												data-driven products that inform conservation planning and support best management practices for wildlife corridors.</li>
 										</ul>
 										<ol>
 											<li>Developed R and Python scripts to facilitate spatial and statistical analysis from multiple data sources
@@ -433,7 +433,7 @@
 
 										</ul>
 										<ol>
-											<li>Informed global conservation efforts recovering wild tiger populations through reintroduction,
+											<li>Informed global conservation efforts about recovering wild tiger populations through reintroduction,
 												habitat restoration, and reducing human-wildlife conflict.</li>
 										</ol>
 										<ul>
@@ -457,8 +457,8 @@
 											<li>Analyzed, interpreted, and synthesized geospatial data and results.</li>
 										</ol>
 										<ul>
-											<li>Conducted spatial and statistical analysis to assess the influence human land use and land change has
-												on 9 big cat populations classified as endangered, vulnerable, and near-threatened.</li>
+											<li>Conducted spatial and statistical analysis to assess the influence habitat loss has on 9 big cat
+												populations classified as endangered, vulnerable, and near-threatened.</li>
 										</ul>
 									</td>
 									<td style="text-align: center; vertical-align: middle;">August 2019<br> - <br>August 2020</td>
