--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							<td style="text-align: center; vertical-align: middle;">
 								Data Analysis<br>
 								Field Sampling<br>
-								<a target="_blank" rel="noopener noreferrer" href="EIA.html">Environmental Impact Assessments</a>
+								<a target="_blank" rel="noopener noreferrer" href="EIA.html">Environmental Impact Assessment</a>
 							</td>
 						</tr>
 						</tfoot>
@@ -85,22 +85,23 @@
 					<dl>
 						<dt>Technical Skills</dt>
 						<dd>
-							<p>ESRI ArcGIS, Spatial Analysis, Image Analysis, Remote Sensing, Spatial and Non-spatial
+							<p>ESRI ArcGIS ArcGIS Desktop and Online, Spatial Analysis, Image Analysis, Remote Sensing, Spatial and Non-spatial
 								Data Management, Data Manipulation and Analysis, Data Visualization, Digitizing,
 								Python, SQL, R, HTML, CSS, JavaScript, SCSS, Troubleshooting, Microsoft Office Suite</p>
 						</dd>
 						<dt>Field Skills</dt>
 						<dd>
-							<p>GPS, Timber Cruise, Water Quality, Soil Health,
-								Small Mammal Trapping and Handling, Genetic Sampling, Mist Netting, Bird Handling,
-								Bird Banding, Morphometric Collection, Radio Telemetry, Acoustic Monitoring, Camera Trapping,
-								Remote Fieldwork</p>
+							<p>GPS, Timber Cruise, Water Quality, Soil Health, Habitat Assessment
+								(Aquatic Freshwater, Forest, Prairie),
+								Small Mammal Trapping and Handling, Genetic Sampling, Mist Netting, Bird/Bat Handling,
+								Bird Banding, Morphometric Data Collection (Avians, Bats, Small Mammals), Blood Sampling,
+								Radio Telemetry, Acoustic Monitoring, Camera Trapping, Remote Fieldwork</p>
 						</dd>
 						<dt>Soft Skills</dt>
 						<dd>
-							<p>Adaptable, Attention to Detail, Collaboration, Communication,
-								Creative, Presentation Development, Project Management,
-								Troubleshooting, Time Management</p><br>
+							<p>Adaptability, Attention to Detail, Collaboration, Communication, Conflict Resolution,
+								Creativity, Cross-Cultural Communication, Cross-Functional Teamwork, Leadership, Organizational,
+								Presentation Development, Project Management, Public Speaking, Troubleshooting, Time Management</p><br>
 						</dd>
 					</dl>
 
