--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 										</ol>
 										<ul>
 											<li>Created an <a target="_blank" rel="noopener noreferrer" href="https://storymaps.arcgis.com/stories/4e4df2a903624f4c83cda7a6c68c3893">
-												ArcGIS StoryMap, <i>Sub-Antarctic Biocultural Conservation</i></a>, to emphasize the interdisciplinary approach
+												ArcGIS StoryMap, <i>Sub-Antarctic Biocultural Conservation</i></a>, to communicate the interdisciplinary approach
 												linking social and ecological systems.</li>
 											<li>Trained the research team in small mammal trapping protocols using Sherman traps and scouting
 												landscapes to identify areas of suitable habitat.</li>
