--- a/index.html
+++ b/index.html
@@ -85,13 +85,16 @@
 					<dl>
 						<dt>Technical Skills</dt>
 						<dd>
-							<p>ESRI ArcGIS ArcGIS Desktop and Online, Spatial Analysis, Image Analysis, Remote Sensing, Spatial and Non-spatial
-								Data Management, Data Manipulation and Analysis, Data Visualization, Digitizing,
-								Python, SQL, R, HTML, CSS, JavaScript, SCSS, Troubleshooting, Microsoft Office Suite</p>
+							<p>ESRI ArcGIS Desktop and Online, Spatial and Non-spatial Data Management,
+								Data Analysis and Visualization, Adobe Illustrator,
+								Spatial and Statistical Analysis, Image Analysis, ModelBuilder,
+								Remote Sensing, Digitizing,
+								Python, SQL, R, HTML, CSS, JavaScript, SCSS, QGIS, Troubleshooting,
+								Microsoft Office Suite (Access, Excel, PowerPoint, Word)</p>
 						</dd>
 						<dt>Field Skills</dt>
 						<dd>
-							<p>GPS, Timber Cruise, Water Quality, Soil Health, Habitat Assessment
+							<p>GPS Data Collection, Timber Cruise, Water Quality, Soil Health, Habitat Assessment
 								(Aquatic Freshwater, Forest, Prairie),
 								Small Mammal Trapping and Handling, Genetic Sampling, Mist Netting, Bird/Bat Handling,
 								Bird Banding, Morphometric Data Collection (Avians, Bats, Small Mammals), Blood Sampling,
