--- a/index.html
+++ b/index.html
@@ -678,6 +678,7 @@
 										<b>The Wildlife Society’s 29th Annual Conference</b><font color="#afbcc0"> • </font>Spokane, Washington<br>
 										<p class="hangingindent"><font color="#7e9094"><b>Long AM</b></font>, Spence ES, Travis J, Beier P, Gregory AJ, Bullock J.
 											<i>An enhanced Methodology for Applied Modeling of Structural and Functional Connectivity.</p>
+											<p class="indent">*Abstract accepted</p>
 									</td>
 									<td style="text-align: center; vertical-align: middle;">November 2022</td>
 								</tr>
