--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
 									<td><b>Field Research Assistant</b><br>
 										Lewisville, Texas
 										<ul>
-											<li>Assisted with training a new graduate student in field data collection following project protocols..</li>
+											<li>Assisted with training a new graduate student in field data collection following project protocols.</li>
 										</ul>
 										<ol>
 											<li>Collected GPS data and set Sherman transects for small mammal trapping.</li>
