--- a/index.html
+++ b/index.html
@@ -651,6 +651,12 @@
 								</thead>
 								<tbody>
 								<td>
+									<p class="hangingindent">									
+									Rezaee M, <font color="#7e9094"><b>Long AM</b></font>, Hendrickson B, Hamid S, Green R, Gregory AJ. 
+										(<i>In Review</i>) Greater Sage-Grouse are an Umbrella Species for Shrub Steppe Bird Communities at a 
+										Range-Wide scale. Journal of Conservation Biology.</p>
+								</td>	
+								<td>
 									<p class="hangingindent">Baxter-Slye J with Contributions from <font color="#7e9094"><b>Long AM</b></font>, Kalta B (2022).
 										<a target="_blank" rel="noopener noreferrer" href="https://he.kendallhunt.com/sites/default/files/product_images_original/9798765708002.jpg">
 											Field & laboratory methods for environmental science for non-majors (2nd edition)</a>.
