--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 						<dt>Field Skills</dt>
 						<dd>
 							<p>GPS Data Collection, Timber Cruise, Water Quality, Soil Health, Habitat Assessment
-								(Aquatic Freshwater, Forest, Prairie),
+								(Aquatic Freshwater, Forest, Prairie), Prairie Restoration,
 								Small Mammal Trapping and Handling, Genetic Sampling, Mist Netting, Bird/Bat Handling,
 								Bird Banding, Morphometric Data Collection (Avians, Bats, Small Mammals), Blood Sampling,
 								Radio Telemetry, Acoustic Monitoring, Camera Trapping, Remote Fieldwork</p>
@@ -220,7 +220,7 @@
 										</ul>
 										<ol>
 											<li>Collected GPS data; mist netted, live handled, and identified avian species to collect blood samples and morphometric data
-											(e.g., age, sex, weight, wing length, tarsus length, bill width).</li>
+											(e.g., age, sex, weight, wing length).</li>
 											<li>Detected malaria using DNA extraction of blood samples and PCR amplification; optimized PCR primers.</li>
 											<li>Collected mosquitoes and black flies to identify malaria parasites in blood smears using microscopy.</li>
 										</ol>
@@ -245,20 +245,21 @@
 										<i>BIOL 1132 Environmental Science Lab for Non-majors </i>
 										<font color="#afbcc0"> •</font> Denton, Texas<br>
 										<ul>
-											<li>Achieved proficiency in effectively communicating technical content to non-technical audiences.</li>
+											<li>Achieved proficiency in effectively communicating technical information to non-technical audiences.</li>
 										</ul>
 										<ol>
 										<li>Applied several teaching techniques to accommodate various learning styles of students.</li>
 										</ol>
 										<ul>										
-											<li>Promoted to lead TA in January 2022; assessed and implemented recommendations to improve course efficiency.</li>
+											<li>Promoted to lead TA in January 2022; evaluated and implemented recommendations to improve course curriculum.</li>
 										</ul>
 										<ol>
 											<li>Actively trained new TAs weekly to aid in their pedagogy development and success.</li>
 											<li>Reliably prepared weekly presentations, exams, learning materials, and organized the online course for all TAs to use.</li>
 										</ol>
 										<ul>
-											<li>Revised 10 modules, lab exercises, and weekly presentation materials to facilitate lab productivity.</li>
+											<li>Revised 10 modules, lab exercises, and weekly presentation materials to facilitate lab productivity
+												and enhance the learning process.</li>
 										</ul>
 										<ol>
 											<li>Published the 2nd edition lab manual,
@@ -266,8 +267,15 @@
 													<i>Field & Laboratory Methods for Environmental Science for Non-majors</i></a>.</li>
 										</ol>
 										<ul>
-											<li>Demonstrated and supervised field/lab experiments for 11-course sections with ~24 students each.</li>
 											<li>Interpreted and synthesized experimental results to lead ~110 individualized class discussions.</li>
+										</ul>
+										<ol>
+											<li>Cultivated an inclusive learning environment to encourage students' commitment to
+												lifelong learning by connecting course content to current events and broader
+											environmental issues.</li>
+										</ol>
+										<ul>
+											<li>Demonstrated and supervised field/lab experiments for 11-course sections with ~24 students each.</li>
 										</ul>
 										<ol>
 											<li>Tested water quality of pond and municipal samples to compare dissolved oxygen, contaminant levels, pH, and turbidity.</li>
@@ -293,11 +301,9 @@
 									</ul>
 									<ol>
 										<li>Processed, analyzed, and managed >2 TB of geospatial data using ArcGIS.</li>
-										<li>Completed a workflow for project team to implement spatial processing across 11+ international landscapes.</li>
-										<li>Identified forest areas suitable for field data collection and spatial modeling following project protocols.</li>
-										<li>Performed field data collection and assisted with training collaborators in field protocols -
-											GPS, small mammal trapping, live handling, genetic/morphometric sampling, forest inventory,
-											acoustic monitoring, camera trapping.</li>
+										<li>Completed a workflow for project team to implement geospatial processing across 11+ international landscapes.</li>
+										<li>Assisted with the international transportation of field and lab equipment, implementing field sampling,
+											and training collaborators in field data collection following project protocols.</li>
 										<li>Developed and cultivated a strong rapport with collaborators in 5 countries.</li>
 										<li>Supported community-led conservation efforts; learned local decision-making processes and needs.</li>
 										<li>Implemented country-specific policies with data collection to support long-term collaborative conservation goals.</li>
@@ -318,17 +324,20 @@
 								<tr>
 									<td>
 										<ul>
-											<li>Provided scientific and technical support to streamline and implement spatial processing
-												across 11+ landscapes using ArcGIS.</li>
+											<li>Provided scientific and technical support to streamline and implement geospatial processing
+												for a long-term international collaborative project.</li>
 										</ul>
 										<ol>
-											<li>Standardized spatial data collection and analysis to meet project objectives and facilitate spatial processing across 11+ international landscapes.</li>
+											<li>Standardized spatial data collection and analysis to meet project objectives and facilitate geospatial
+												processing across 11+ international landscapes using ArcGIS.</li>
 											<li>Performed quality control and optimized >4,500 GPS points to integrate with spatial analysis.</li>
-											<li>Analyzed satellite imagery and digitized forest and rangeland boundaries.</li>
+											<li>Analyzed satellite imagery for 3 landscapes to assess forest and rangeland habitat
+												quality and digitize 14 habitat patch boundaries for connectivity models.</li>
 										</ol>
 										<ul>
-										<li>Applied the best and developed new spatial processes using ArcGIS to assess conservation corridor 
-											efficacy and inform land and wildlife management.</li>										</ul>
+											<li>Assessed current GIS technologies to apply the best and develop new geospatial processes
+												to assess conservation corridor efficacy and inform land and wildlife management.</li>
+										</ul>								</ul>
 										<ol>
 											<li>Thoroughly documented methodological approaches and troubleshooting. </li>
 										</ol>
@@ -375,16 +384,16 @@
 											<li>Updated, manipulated, managed, and ensured accuracy of spatial and non-spatial data to meet project objectives.</li>
 										</ol>
 										<ul>
-											<li>Developed spatially explicit models to quantify landscape connectivity using ArcGIS and <i>Circuitscape</i>.</li>
+											<li>Developed spatially explicit environmental models to quantify landscape connectivity using ArcGIS, R, Python, and <i>Circuitscape</i>.</li>
 										</ul>
 										<ol>
 											<li>Analyzed satellite imagery, classified land covers, and corrected errors to produce raster layers with overall >92% accuracy.</li>
 											<li>Measured gene flow across natural wildlife corridors to assess corridor efficacy using ArcGIS, R, and GenAlEx.</li>
-											<li>Extensively reviewed literature to develop expert literature-based raster models for small mammals.</li>
+											<li>Extensively reviewed literature to develop expert literature-based raster models for 4 small mammals.</li>
 										</ol>
 										<ul>
 											<li>Applied best and personally developed spatial approaches and tools to facilitate
-												spatial processing and data analysis.</li>
+												geospatial processing and data analysis.</li>
 										</ul>
 										<ol>
 											<li>Thoroughly documented methodological approaches and troubleshooting.</li>
@@ -399,7 +408,7 @@
 										<i>Greater Sage-Grouse are an Umbrella Species for Shrub-Steppe Bird Communities at a Range-Wide Scale</i><br>
 										<ul>
 											<li>Optimized >2,400 spatial data points for spatial and statistical analysis using Breeding Bird Survey data.</li>
-											<li>Produced cartographic and data-driven products following journal guidelines to support land and wildlife management using ArcGIS and R.</li>
+											<li>Produced cartographic and data-driven products following journal guidelines to inform land and wildlife management using ArcGIS and R.</li>
 										</ul>
 										<ol>
 											<li>Developed R scripts for statistical analysis and uniform data visualization.</li>
@@ -415,7 +424,7 @@
 												avian diversity over time.</li>
 										</ul>
 										<ol>
-											<li>Informed conservation decisions to manage rangelands and greater sage-grouse as an umbrella
+											<li>Informed conservation decisions to manage rangeland habitats and greater sage-grouse as an umbrella
 												species to protect avian biodiversity long-term.</li>
 										</ol>
 									</td>
@@ -457,7 +466,7 @@
 										<ol>
 											<li>Automated spatial analysis and data management using ModelBuilder.</li>
 											<li>Developed spatially explicit models using geospatial data from multiple sources.</li>
-											<li>Extensively reviewed literature to develop expert literature-based models using spatially explicit environmental data.</li>
+											<li>Extensively reviewed literature to develop expert literature-based raster models using spatially explicit environmental data.</li>
 											<li>Analyzed, interpreted, and synthesized geospatial data and results.</li>
 										</ol>
 										<ul>
@@ -489,15 +498,16 @@
 										<b>Field Research Assistant</b><br>
 										Managua, Nicaragua<br>
 										<ul>
-											<li>Actively assisted with training local collaborators in field data collection following project protocols.</li>
+											<li>Assisted the project manager with training local collaborators in field data collection following project protocols.</li>
 										</ul>
 										<ol>
-											<li>Scouted landscapes to identify forest patches suitable for small mammal trapping, forest inventories, and spatial modeling.</li>
+											<li>Scouted landscapes to identify forest patches suitable for small mammal trapping, forest inventory, and spatial modeling.</li>
 											<li>Collected GPS data, set Sherman transects, live handled and identified small mammals,
 												collected ear tissue samples and morphometric data
-												(e.g., sex, weight, total length, hind foot length, tail length, ear size).
-											<li>Measured tree DBH, height, visual obstruction, and ground cover; identified tree species.</li>
-											<li>Set acoustic monitors to understand the influence of sound pollution on small mammal populations.</li>
+												(e.g., sex, weight, total length, hind foot length).
+											<li>Identified tree species, measured tree DBH, height, visual obstruction, and ground cover to assess
+											forest habitat health.</li>
+											<li>Set acoustic monitors to assess the influence of sound pollution on small mammal populations.</li>
 										</ol>
 										<ul>
 											<li>Set mist nets, identified bat species, and collected morphometric data
@@ -515,11 +525,12 @@
 									<td><b>Field Research Assistant</b><br>
 										Lewisville, Texas
 										<ul>
-											<li>Assisted with training a new graduate student in field data collection following project protocols.</li>
+											<li>Assisted with training a new graduate student in field data collection following project protocols
+											for small mammal trapping and forest inventory.</li>
 										</ul>
 										<ol>
-											<li>Collected GPS data and set Sherman transects for small mammal trapping.</li>
-											<li>Measured tree DBH, height, visual obstruction, ground cover; identified tree species.</li>
+											<li>Collected GPS data; set Sherman transects; identified tree species, measured tree DBH, height, visual obstruction, and ground cover
+												to assess forest habitat health.</li>
 										</ol>
 									</td>
 									<td style="text-align: center; vertical-align: middle;">July 2022</td>
@@ -529,7 +540,7 @@
 										<b>Field Research Assistant</b><br>
 										Kakamega, Kenya<br>
 										<ul>
-											<li>Actively assisted with training local collaborators in field data collection following project protocols.</li>
+											<li>Assisted the project manager with training local collaborators in field data collection following project protocols.</li>
 										</ul>
 										<ol>
 											<li>Collected GPS data, measured tree DBH, height, visual obstruction, ground cover; identified tree species.</li>
@@ -551,17 +562,19 @@
 										<b>Field and Lab Technician</b><br>
 										Tarquinia, Italy<br>
 										<ul>
-											<li>Actively conducted fieldwork and lab work with the project manager and local collaborators.</li>
+											<li>Collected field data and conducted lab work following project protocols with the project manager
+												and local collaborators.</li>
 										</ul>
 										<ol>
-											<li>Utilized mobile genetics lab to extract DNA from fecal and tissue samples.</li>
-											<li>Conducted walking scat surveys to collect fecal samples for genetic analysis.</li>
-											<li>Scouted landscapes to identify forest patches suitable for small mammal trapping, forest inventories, and spatial modeling.</li>
+											<li>Utilized a mobile genetics lab to extract DNA from fecal and tissue samples.</li>
+											<li>Conducted walking scat surveys to collect fecal samples for mesocarnivore genetic analysis.</li>
+											<li>Scouted landscapes to identify forest patches suitable for small mammal trapping, forest inventory, and spatial modeling.</li>
 											<li>Collected GPS data, set Sherman transects, live handled and identified small mammals,
 												collected ear tissue samples and morphometric data
-												(e.g., sex, weight, total length, hind foot length, tail length, ear size).
-											<li>Measured tree DBH, height, visual obstruction, and ground cover; identified tree species.</li>
-											<li>Set acoustic monitors to understand the influence of sound pollution on small mammal populations.</li>
+												(e.g., sex, weight, tail length, ear size).
+											<li>Identified tree species, measured tree DBH, height, visual obstruction, and ground cover to assess
+											forest habitat health.</li>
+											<li>Set acoustic monitors and camera traps to capture and assess disturbances on small mammal populations.</li>
 										</ol>
 										<ul>
 											<li>Established and maintained strong working relationships with partners in academia and private sectors.</li>
@@ -577,8 +590,10 @@
 											<li>Volunteered 30 hours to actively assist a colleague with field data collection.</li>
 										</ul>
 										<ol>
-											<li>Collected GPS data, telemetry, triangulation, and identified quail mortalities.</li>
-											<li>Measured tree DBH, height, visual obstruction, and ground cover; identified tree species.</li>
+											<li>Located quail using telemetry and triangulation to understand habitat use and home ranges.</li>
+											<li>Located quail mortalities using telemetry; identified cause of mortality to understand predator-prey relationships.</li>
+											<li>Collected GPS data; identified tree species, measured tree DBH, height, visual obstruction, and ground cover to assess
+											forest habitat health.</li>
 										</ol>
 									</td>
 									<td style="text-align: center; vertical-align: middle;">September 2021</td>
@@ -588,18 +603,20 @@
 										<b>Field Technician</b><br>
 										Reading, Kansas<br>
 										<ul>
-											<li>Surveyed a Greater Prairie-chicken lek to assess courtship displays and breeding behaviors.</li>
-											<li>Actively conducted fieldwork with the project manager, project PI, and local collaborators.</li>
+											<li>Surveyed a near threatened Greater Prairie-chicken lek to assess courtship displays and breeding behaviors.</li>
+											<li>Collected field data following project protocols with the project manager
+												project co-PI, and local collaborators.</li>
 										</ul>
 										<ol>
-											<li>Scouted landscapes to identify forest patches suitable for small mammal trapping, forest inventories, and spatial modeling.</li>
+											<li>Scouted landscapes to identify forest patches suitable for small mammal trapping, forest inventory, and spatial modeling.</li>
 											<li>Collected GPS data, set Sherman transects, live handled and identified small mammals,
 												collected ear tissue samples and morphometric data
-												(e.g., sex, weight, total length, hind foot length, tail length, ear size).
-											<li>Measured tree DBH, height, visual obstruction, and ground cover; identified tree species.</li>
+												(e.g., sex, weight, total length, ear size).
+											<li>Identified tree species, measured tree DBH, height, visual obstruction, and ground cover to assess
+											forest habitat health.</li>
 										</ol>
 										<ul>
-											<li>Established and maintained strong working relationships with the local field technician.</li>
+											<li>Established and maintained a strong working relationship with the local field technician.</li>
 										</ul>
 									</td>
 									<td style="text-align: center; vertical-align: middle;">April 2021</td>
@@ -650,18 +667,22 @@
 								</tr>
 								</thead>
 								<tbody>
-								<td>
-									<p class="hangingindent">									
-									Rezaee M, <font color="#7e9094"><b>Long AM</b></font>, Hendrickson B, Hamid S, Green R, Gregory AJ. 
-										(<i>In Review</i>) Greater Sage-Grouse are an Umbrella Species for Shrub Steppe Bird Communities at a 
+								<tr>
+									<td>
+									<p class="hangingindent">
+									Rezaee M, <font color="#7e9094"><b>Long AM</b></font>, Hendrickson B, Hamid S, Green R, Gregory AJ.
+										(<i>In Review</i>) Greater Sage-Grouse are an Umbrella Species for Shrub Steppe Bird Communities at a
 										Range-Wide scale. Journal of Conservation Biology.</p>
-								</td>	
+									</td>
+								</tr>
+								<tr>
 								<td>
 									<p class="hangingindent">Baxter-Slye J with Contributions from <font color="#7e9094"><b>Long AM</b></font>, Kalta B (2022).
 										<a target="_blank" rel="noopener noreferrer" href="https://he.kendallhunt.com/sites/default/files/product_images_original/9798765708002.jpg">
 											Field & laboratory methods for environmental science for non-majors (2nd edition)</a>.
 										Department of Biological Sciences at University of North Texas. Kendall Hunt Publishing.</p>
-								</td>
+									</td>
+								</tr>
 								</tfoot>
 							</table>
 						</div>
