--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
 										<b>Field Technician</b><br>
 										Lewisville, Texas<br>
 										<ul>
-											<li>Volunteered 30 hours to actively assist a colleague with field data collection.</li>
+											<li>Volunteered 30 hours to assist a colleague with field data collection.</li>
 										</ul>
 										<ol>
 											<li>Located quail using telemetry and triangulation to understand habitat use and home ranges.</li>
@@ -704,7 +704,7 @@
 									<td>
 										<b>The Wildlife Society’s 29th Annual Conference</b><font color="#afbcc0"> • </font>Spokane, Washington<br>
 										<p class="hangingindent"><font color="#7e9094"><b>Long AM</b></font>, Spence ES, Travis J, Beier P, Gregory AJ, Bullock J.
-											<i>An enhanced Methodology for Applied Modeling of Structural and Functional Connectivity.</p>
+											<i>An enhanced Methodology for Applied Modeling of Structural and Functional Connectivity.</i></p>
 											<p class="indent">*Abstract accepted</p>
 									</td>
 									<td style="text-align: center; vertical-align: middle;">November 2022</td>
