--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 						<dd>
 							<p>ESRI ArcGIS Desktop and Online, Spatial and Non-spatial Data Management,
 								Data Analysis and Visualization, Adobe Illustrator,
-								Spatial and Statistical Analysis, Image Analysis, ModelBuilder,
+								Spatial and Statistical Analysis, Image Analysis, Carbon Analysis, ModelBuilder,
 								Remote Sensing, Digitizing,
 								Python, SQL, R, HTML, CSS, JavaScript, SCSS, QGIS, Troubleshooting,
 								Microsoft Office Suite (Access, Excel, PowerPoint, Word)</p>
