--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 												spatial modeling, and statistical analysis.</li>
 										</ul>
 										<ol>
-											<li>Actively collected GPS data; measured tree DBH, height, and percent cover; identified tree species.</li>
+											<li>Identified tree species, measured tree DBH, height, visual obstruction, and ground cover.</li>
 											<li>Quantified coarse woody debris to estimate hours of fuel on the ground and determine fire hazards.</li>
 										</ol>
 										<ul>
