--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
 						<dt>Soft Skills</dt>
 						<dd>
 							<p>Adaptability, Attention to Detail, Collaboration, Communication, Conflict Resolution,
-								Creativity, Cross-Cultural Communication, Cross-Functional Teamwork, Leadership, Organizational,
-								Presentation Development, Project Management, Public Speaking, Troubleshooting, Time Management</p><br>
+								Creativity, Cross-Cultural Communication, Cross-Functional Teamwork, Intercultural Communication, Leadership, Organizational,
+								Presentation Development, Project Management, Public Speaking, Time Management, Troubleshooting</p><br>
 						</dd>
 					</dl>
 
