--- a/index.html
+++ b/index.html
@@ -198,6 +198,34 @@
 								</tr>
 								</thead>
 								<tr>
+									<td><b>Spatial Ecologist, Climate Science</b><br>
+										<i><a target="_blank" rel="noopener noreferrer" href="https://www.audubon.org/conservation/science">
+											National Audubon Society, Conservation Science</a></i>
+										<font color="#afbcc0"> • </font>Remote
+										<br>
+										<ul>
+											<li>Conduct scientific analyses to support Audubon's national science team with regional, national,
+												and hemispheric bird conservation initiatives.</li>
+										</ul>
+										<ol>
+											<li>Develop scientific data products for national climate science projects and the
+												<a target="_blank" rel="noopener noreferrer" href="https://www.audubon.org/conservation/climate-watch">
+													Climate Watch</a> community science program.</li>
+											<li>Lead and provide technical support with spatial data analysis, data management, data visualization, and
+												grant writing and reporting for projects across Conservation Science teams.</li>
+											<li>Conduct statistical and spatial data analyses using ArcGIS, R, Python. </li>
+											<li>Collect, acquire, process, share, and manage biological, climatic, and carbon data.</li>
+										</ol>
+										<ul>
+											<li>Foster partnerships with scientists and staff in academic institutions, NGOs, and state and
+												federal agencies.</li>
+											<li>Participate in the science team's Equity, Diversity, Inclusion, and Belonging (EDIB) working group
+												to contribute to EDIB and Audubon community initiatives.</li>
+										</ul>
+									</td>
+									<td style="text-align: center; vertical-align: middle;">July 2023<br> - <br>Present</td>
+								</tr>								
+								<tr>
 									<td><b>Research Fellow</b><br>
 										<i>Sub-Antarctic Biocultural Conservation Program</i> <font color="#afbcc0">•</font> Cape Horn Biosphere Reserve, Chile
 										<br>
