--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
 								<tr>
 								</tr>
 								</thead>
+								<tbody>
 								<tr>
 									<td><b>Spatial Ecologist, Climate Science</b><br>
 										<i><a target="_blank" rel="noopener noreferrer" href="https://www.audubon.org/conservation/science">
@@ -213,7 +214,7 @@
 													Climate Watch</a> community science program.</li>
 											<li>Lead and provide technical support with spatial data analysis, data management, data visualization, and
 												grant writing and reporting for projects across Conservation Science teams.</li>
-											<li>Conduct statistical and spatial data analyses using ArcGIS, R, Python. </li>
+											<li>Conduct statistical and spatial data analyses using ArcGIS, R, and Python. </li>
 											<li>Collect, acquire, process, share, and manage biological, climatic, and carbon data.</li>
 										</ol>
 										<ul>
@@ -234,7 +235,7 @@
 												spatial modeling, and statistical analysis.</li>
 										</ul>
 										<ol>
-											<li>Identified tree species, measured tree DBH, height, visual obstruction, and ground cover.</li>
+											<li>Identified tree species, and measured tree DBH, height, visual obstruction, and ground cover.</li>
 											<li>Quantified coarse woody debris to estimate hours of fuel on the ground and determine fire hazards.</li>
 										</ol>
 										<ul>
@@ -392,6 +393,7 @@
 								<tr>
 								</tr>
 								</thead>
+								<tbody>
 								<tr>
 									<td>
 										<b>Graduate Thesis Research</b> (UNT) <br>
@@ -520,7 +522,7 @@
 								<tr>
 								</tr>
 								</thead>
-
+								<tbody>
 								<tr>
 									<td>
 										<b>Field Research Assistant</b><br>
