--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 											<li>Collected GPS data; mist netted, live handled, and identified avian species to collect blood samples and morphometric data
 											(e.g., age, sex, weight, wing length).</li>
 											<li>Detected malaria using DNA extraction of blood samples and PCR amplification; optimized PCR primers.</li>
-											<li>Collected mosquitoes and black flies to identify malaria parasites in blood smears using microscopy.</li>
+											<li>Collected mosquitoes and black flies to identify parasites in blood smears using microscopy.</li>
 										</ol>
 										<ul>
 											<li>Created an <a target="_blank" rel="noopener noreferrer" href="https://storymaps.arcgis.com/stories/4e4df2a903624f4c83cda7a6c68c3893">
