--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
 											<li>Develop scientific data products for national climate science projects and the
 												<a target="_blank" rel="noopener noreferrer" href="https://www.audubon.org/conservation/climate-watch">
 													Climate Watch</a> community science program.</li>
-											<li>Lead and provide technical support with spatial data analysis, data management, data visualization, and
-												grant writing and reporting for projects across Conservation Science teams.</li>
+											<li>Provide technical support with spatial data analysis, data management, data visualization, and
+												grant writing/reporting for projects.</li>
 											<li>Conduct statistical and spatial data analyses using ArcGIS, R, and Python. </li>
 											<li>Collect, acquire, process, share, and manage biological, climatic, and carbon data.</li>
 										</ol>
