--- a/index.html
+++ b/index.html
@@ -209,20 +209,10 @@
 												and hemispheric bird conservation initiatives.</li>
 										</ul>
 										<ol>
-											<li>Develop scientific data products for national climate science projects and the
-												<a target="_blank" rel="noopener noreferrer" href="https://www.audubon.org/conservation/climate-watch">
-													Climate Watch</a> community science program.</li>
 											<li>Lead/provide technical support with spatial data analysis, data management, and data visualization
 												for projects.</li>
-											<li>Conduct statistical and spatial data analyses using ArcGIS, R, and Python. </li>
-											<li>Collect, acquire, process, share, and manage biological, climatic, and carbon data.</li>
+											<li>Use ArcGIS, R, and Python to conduct spatial and statistical data analysis</li>
 										</ol>
-										<ul>
-											<li>Foster partnerships with scientists and staff in academic institutions, NGOs, and state and
-												federal agencies.</li>
-											<li>Participate in the science team's Equity, Diversity, Inclusion, and Belonging (EDIB) working group
-												to contribute to EDIB and Audubon community initiatives.</li>
-										</ul>
 									</td>
 									<td style="text-align: center; vertical-align: middle;">July 2023<br> - <br>Present</td>
 								</tr>								
