--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 											</dd>
 										</dl>	
 									</td>
-									<td style="text-align: center; vertical-align: middle;">December 2022</td>
+									<td style="text-align: center; vertical-align: middle;">May 2023</td>
 								</tr>
 								<tr>
 									<td>
@@ -205,14 +205,15 @@
 										<font color="#afbcc0"> • </font>Remote
 										<br>
 										<ul>
-											<li>Conduct scientific analyses to support Audubon's national science team with regional, national,
-												and hemispheric bird conservation initiatives.</li>
+											<li>Collaborate across the Audubon network to strengthen partnerships and support regional, national, and hemispheric bird conservation initiatives.</li>
 										</ul>
 										<ol>
-											<li>Lead/provide technical support with spatial data analysis, data management, and data visualization
-												for projects.</li>
-											<li>Use ArcGIS, R, and Python to conduct spatial and statistical data analysis</li>
+											<li>Conduct spatial and statistical analysis and create cartographic and data-driven science products to support projects across Audubon's national Science Team.</li>
+											<li>Lead and/or provide technical support to collect, manage, process, analyze, and communicate results of geospatial data to diverse audiences.</li>
 										</ol>
+										<ul>
+											<li>Participate in the Science Team’s Equity, Diversity, Inclusion, and Belonging (EDIB) Working Group to develop and/or implement processes that aid in the accessibility of and integrate Audubon’s EDIB Conservation Principles into our science.</li>
+										</ul>
 									</td>
 									<td style="text-align: center; vertical-align: middle;">July 2023<br> - <br>Present</td>
 								</tr>								
